--- a/index.html
+++ b/index.html
@@ -2,115 +2,179 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Formulário de várias etapas</title>
+    <title>Formulário | triggo.ai</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
     <div class="container">
-      <header>Formulário</header>
-      
-      <div class="form-outer">
-        <form action="#">
-          <div class="page slide-page">
-            <div class="title">Informação básica:</div>
-            <div class="field">
-              <div class="label">Primeiro nome</div>
-              <input type="text">
-            </div>
-            <div class="field">
-              <div class="label">Sobrenome</div>
-              <input type="text">
-            </div>
-
-            <div class="field">
-              <button class="firstNext next">Próximo</button>
-            </div>
-          </div>
-
-          <div class="page">
-            <div class="title">Informações de contato</div>
-            <div class="field">
-              <div class="label">Endereço de e-mail</div>
-              <input type="text">
-            </div>
-            <div class="field">
-              <div class="label">Número de telefone</div>
-              <input type="Number">
-            </div>
-            <div class="field btns">
-              <button class="prev-1 prev">Anterior</button>
-              <button class="next-1 next">Próximo</button>
-            </div>
-          </div>
-
-          <div class="page">
-            <div class="title">Nascimento:</div>
-            <div class="field">
-              <div class="label">Data</div>
-              <input type="text">
-            </div>
-            <div class="field">
-              <div class="label">Gênero</div>
-              <select>
-                <option>Masculino</option>
-                <option>Feminino</option>
-                <option>Outros</option>
-              </select>
-            </div>
-            <div class="field btns">
-              <button class="prev-2 prev">Anterior</button>
-              <button class="next-2 next">Próximo</button>
-            </div>
-          </div>
-
-          <div class="page">
-            <div class="title">Detalhes de login:</div>
-            <div class="field">
-              <div class="label">Nome do usuário</div>
-              <input type="text">
-            </div>
-            <div class="field">
-              <div class="label">Senha</div>
-              <input type="password">
-            </div>
-            <div class="field btns">
-              <button class="prev-3 prev">Anterior</button>
-              <button class="submit">Enviar</button>
-            </div>
-          </div>
-        </form>
-      </div>
+      <header>Vamos começar!</header>
 
       <div class="progress-bar">
         <div class="step">
-          <p>Nome</p>
+          <p>Seção</p>
           <div class="bullet">
             <span>1</span>
           </div>
           <div class="check fas fa-check"></div>
         </div>
         <div class="step">
-          <p>Contato</p>
+          <p>Seção</p>
           <div class="bullet">
             <span>2</span>
           </div>
           <div class="check fas fa-check"></div>
         </div>
         <div class="step">
-          <p>Data</p>
+          <p>Seção</p>
           <div class="bullet">
             <span>3</span>
           </div>
           <div class="check fas fa-check"></div>
         </div>
         <div class="step">
-          <p>Enviar</p>
+          <p>Seção</p>
           <div class="bullet">
             <span>4</span>
           </div>
           <div class="check fas fa-check"></div>
         </div>
+        <div class="step">
+          <p>Seção</p>
+          <div class="bullet">
+            <span>5</span>
+          </div>
+          <div class="check fas fa-check"></div>
+        </div>
+      </div>
+      
+      <div class="form-outer">
+        <form action="#">
+          <div class="page slide-page">
+
+            <div class="title">Preencha o formulário a seguir para iniciar o assessment</div>
+            <div class="field">
+              <div class="label">Nome completo:</div>
+              <input type="text">
+            </div>
+            <div class="field">
+              <div class="label">E-mail corporativo:</div>
+              <input type="text">
+            </div>
+            <div class="field">
+              <div class="label">Quantidade de funcionários da empresa:</div>
+              <input type="text">
+            </div>
+            <div class="field">
+              <div class="label">Seu cargo ou função:</div>
+              <input type="text">
+            </div>
+            <div class="field">
+              <div class="label">Segmento do negócio:</div>
+              <input type="text">
+            </div>
+
+            <div class="field">
+              <button class="firstNext next">Avançar</button>
+            </div>
+          </div>
+
+          <div class="page">
+            <div class="title">Sua empresa já possui ou está implementando alguma dessas soluções?</div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Data Lake</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Data Warehouse</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Solução em Governança de Dados Enterprise</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Machine Learning em produção</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Self Service BI</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Real Time Analytics</div>
+            </div>
+            <div class="field btns">
+              <button class="prev-1 prev">Anterior</button>
+              <button class="next-1 next">Avançar</button>
+            </div>
+          </div>
+
+          <div class="page">
+            <div class="title">Qual estágio de adoção na Nuvem no seu ambiente Analytics?</div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">+80% - On premises &#40local&#41</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">+80% - Nuvem</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">AWS</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Azure</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">GCP</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Outros</div>
+            </div>
+            <div class="field">
+              <input class="radio" type="checkbox" name="" id="">
+              <div class="radiotext">Hibrido &#40Nuvem + On Premises&#41</div>
+            </div>
+            <div class="field btns">
+              <button class="prev-2 prev">Anterior</button>
+              <button class="next-2 next">Avançar</button>
+            </div>
+          </div>
+
+          <div class="page">
+            <div class="title">Qual o seu volume de dados atual?</div>
+            <div class="field">
+              <div class="label">Total de volume das bases de Analytics &#40últimos 3 mêses&#41</div>
+              <input type="text">
+            </div>
+            <div class="field">
+              <div class="label">Total de volume histórico &#40+3 meses&#41</div>
+              <input type="text">
+            </div>
+            <div class="field btns">
+              <button class="prev-3 prev">Anterior</button>
+              <button class="next-3">Avançar</button>
+            </div>
+          </div>
+
+          <div class="page">
+            <div class="title">Explique com mais detalhes, como podemos ajudá-lo na sua jornada Data Driven?</div>
+            <div class="field">
+              <div class="label">Mensagem:</div>
+              <textarea class="textarea" id="" cols="98" rows="60" placeholder=" |" onfocus="this.placeholder=''" onblur="this.placeholder=' |'"></textarea>
+            </div>
+            <div class="field btns" style="margin-top: 300px!important;">
+              <button class="prev-4 prev">Anterior</button>
+              <button class="submit">Enviar</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
     <script src="script.js"></script>
