--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
             <div class="title">Preencha o formulário a seguir para iniciar o assessment</div>
             <div class="field">
               <div class="label">Nome completo:</div>
-              <input type="text">
+              <input type="text" id="name">
             </div>
             <div class="field">
               <div class="label">E-mail corporativo:</div>
-              <input type="text">
+              <input type="text" id="email">
             </div>
             <div class="field">
               <div class="label">Quantidade de funcionários da empresa:</div>
-              <input type="text">
+              <input type="text" id="workers">
             </div>
             <div class="field">
               <div class="label">Seu cargo ou função:</div>
-              <input type="text">
+              <input type="text" id="office">
             </div>
             <div class="field">
               <div class="label">Segmento do negócio:</div>
-              <input type="text">
+              <input type="text" id="business">
             </div>
 
             <div class="field">
@@ -84,27 +84,27 @@
           <div class="page">
             <div class="title">Sua empresa já possui ou está implementando alguma dessas soluções?</div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Data Lake" id="s2option1">
               <div class="radiotext">Data Lake</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Data Warehouse" id="s2option2">
               <div class="radiotext">Data Warehouse</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Solução em Governança de Dados Enterprise" id="s2option3">
               <div class="radiotext">Solução em Governança de Dados Enterprise</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Machine Learning em produção" id="s2option4">
               <div class="radiotext">Machine Learning em produção</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Self Service BI" id="s2option5">
               <div class="radiotext">Self Service BI</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Real Time Analytics" id="s2option6">
               <div class="radiotext">Real Time Analytics</div>
             </div>
             <div class="field btns">
@@ -116,31 +116,31 @@
           <div class="page">
             <div class="title">Qual estágio de adoção na Nuvem no seu ambiente Analytics?</div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="+80% - On premises &#40local&#41" id="s3option1">
               <div class="radiotext">+80% - On premises &#40local&#41</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="+80% - Nuvem" id="s3option2">
               <div class="radiotext">+80% - Nuvem</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="AWS" id="s3option3">
               <div class="radiotext">AWS</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Azure" id="s3option4">
               <div class="radiotext">Azure</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="GCP" id="s3option5">
               <div class="radiotext">GCP</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Outros" id="s3option6">
               <div class="radiotext">Outros</div>
             </div>
             <div class="field">
-              <input class="radio" type="checkbox" name="" id="">
+              <input class="radio" type="checkbox" value="Hibrido &#40Nuvem + On Premises&#41" id="s3option7">
               <div class="radiotext">Hibrido &#40Nuvem + On Premises&#41</div>
             </div>
             <div class="field btns">
@@ -153,11 +153,11 @@
             <div class="title">Qual o seu volume de dados atual?</div>
             <div class="field">
               <div class="label">Total de volume das bases de Analytics &#40últimos 3 mêses&#41</div>
-              <input type="text">
+              <input type="text" id="analytics">
             </div>
             <div class="field">
               <div class="label">Total de volume histórico &#40+3 meses&#41</div>
-              <input type="text">
+              <input type="text" id="history">
             </div>
             <div class="field btns">
               <button class="prev-3 prev">Anterior</button>
@@ -169,17 +169,17 @@
             <div class="title">Explique com mais detalhes, como podemos ajudá-lo na sua jornada Data Driven?</div>
             <div class="field">
               <div class="label">Mensagem:</div>
-              <textarea class="textarea" id="" cols="98" rows="60" placeholder=" |" onfocus="this.placeholder=''" onblur="this.placeholder=' |'"></textarea>
+              <textarea class="textarea" id="message" cols="98" rows="60" placeholder=" |" onfocus="this.placeholder=''" onblur="this.placeholder=' |'"></textarea>
             </div>
             <div class="field btns" style="margin-top: 300px!important;">
               <button class="prev-4 prev">Anterior</button>
-              <button class="submit">Enviar</button>
+              <button class="submit" onclick="salvarDados()">Enviar</button>
             </div>
           </div>
         </form>
       </div>
     </div>
     <script src="script.js"></script>
-
+    <script src="dados.js"></script>
   </body>
 </html>
