versão com responsividade em todos os dispositivos

--- a/formulario.html
+++ b/formulario.html
@@ -62,7 +62,7 @@
               <div class="label">E-mail corporativo:</div>
               <input type="text" id="email" onclick="limpar()">
             </div>
-            <div class="inputCampo">
+            <div class="inputCampo campoFold">
               <div class="label">Quantidade de funcionários da empresa:</div>
                 <div class="quantidade">
                   <input type="radio" id="ate50" name="quantidade" class="radio" value="Até 50" checked>
@@ -184,9 +184,9 @@
           </div>
 
           <div class="page">
-            <div class="title">Explique com mais detalhes, como podemos ajudá-lo na sua jornada Data Driven?</div>
+            <div class="title finaltext">Explique com mais detalhes, como podemos ajudá-lo na sua jornada Data Driven?</div>
             <div class="inputCampo">
-              <div class="label">Mensagem:</div>
+              <div class="label finaltext">Mensagem:</div>
               <textarea class="textarea" id="message" cols="" rows="" placeholder=" |" onfocus="this.placeholder=''" onblur="this.placeholder=' |'"></textarea>
             </div>
             <div class="botao" style="margin-top: 300px!important;">
