--- a/formulario.html
+++ b/formulario.html
@@ -208,6 +208,22 @@
                 <button type="button">Converse com um especialista</button>
             </div>
           </div>
+          <div class="line"></div>
+            <div class="containerFinal">
+              <div class="plFinal">
+                <span class="copyright">&copy; Copyright</span> 
+                <strong>
+                  <span>triggo.ai</span>
+                </strong>
+                <span class="copyright">todos os direitos reservados</span>
+              </div>
+              <div>
+                <a href="politica_privacidade.html" class="politicaPr">Política de Privacidade e Cookies | Direito de Privacidade​</a>
+              </div>
+              <div>
+                <span class="sysmap">Uma empresa do grupo <a href="https://www.sysmap.com.br/" class="politicaPr">SysMap</a></span>
+              </div>
+            </div>
         </form>
       </div>
     </div>
